--- a/ntlcargo/templates/login.html
+++ b/ntlcargo/templates/login.html
@@ -2,17 +2,115 @@
 {% load static %}
 {% block title%}Login page{% endblock %}
 {% block content %}
+<style>
+    .header {
+    position: relative;
+    background-color: #072146;
+}
+</style>
+
 <div class="page-cnt">
-    <div class="about-banner">
-    <img src ="{% static 'images/AImage02.jpg' %}"/>
+    <div class="container login_form mt-5" id="Login_form">
+        <div class="form-container  sign-up-container">
+        <form action="#" method="POST">
+            {% csrf_token %}
+            <div class="login_header">Sign Up</div>
+            <!--<div class="social__media__container">
+                
+                <a href="#" class="social google">
+                    <i class="fa-brands fa-google"></i>
+                </a>
+                <a href="https://www.instagram.com/zaur.suleymnv/"  target="_blank" class="social instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+              <span class="under__social">
+                 <a href="#" class="link signin-link">or use your email for registration
+                </a>
+            </span>-->
+            
+            <div class="button-input-group">
+                <div class="group input-group">
+                <input type="text" placeholder="Name" name="reg_username" required>
+            </div>
+            <div class="group input-group">
+                <input type="email" placeholder="Email" name="reg_email" required>
+            </div>
+            <div class="group input-group">
+                <input type="password" placeholder="Password" name="reg_password" required pattern=".{8,}">
+            </div>
+            <div class="alert-text signup__alert">
+                <span class="help__text">At least 8 character</span>
+            </div>
+            <div class="group button-group">
+                <button class="signup-btn">Sign Up</button>
+            </div>
+            </div>
+            
+        </form>
     </div>
-<form method="post">
-    {% csrf_token %}
-    <div class="login_form">
-    <input type="text" name="username" placeholder="Enter User Name.."/>
-    <input type="password" name="password" placeholder="Enter Password.."/>
-    <button type="submit">Login</button>
+    
+    
+    <div class="form-container  sign-in-container">
+        <form action="#" method="POST">
+            {% csrf_token %}
+            <div class="login_header">Sign In</div>
+           <!-- <div class="social__media__container">
+                
+                <a href="#" class="social google">
+                    <i class="fa-brands fa-google"></i>
+                </a>
+                <a href="https://www.instagram.com/zaur.suleymnv/"  target="_blank"  class="social instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+             <span class="under__social">
+                 <a href="#" class="link signup-link">or use your account</a>
+            </span>-->
+            
+        <div class="button-input-group">
+            <div class="group input-group">
+                <input type="email" placeholder="Email" name="user_name" required>
+            </div>
+            <div class="group input-group">
+                <input type="password" placeholder="Password" name="user_login_password" required pattern=".{8,}">
+            </div>
+            <div class="alert-text signup__alert">
+                <span class="help__text">At least 8 character</span>
+            </div>
+            <div class="form-link forgot">
+                <a href="#" class="login-link">Forgot your password?</a>
+            </div>
+            <div class="group button-group">
+                <button class="signin-btn">Sign in</button>
+            </div>
+        </div>
+        </form>
     </div>
-</form>
+    
+    
+    
+    <div class="overlay-container">
+        <div class="overlay">
+            <div class="overlay-panel overlay-left">
+                <h1>Welcome Back!</h1>
+                <p>Please login your personal info</p>
+                
+            <div class="group button-group">
+                <button class="ghost" id="signIn">Sign in</button>
+            </div>
+            </div>
+            
+            <div class="overlay-panel overlay-right">
+                <h1>Hello, Friend!</h1>
+    <p>Enter your personal details and start your journey with us</p>
+                
+            <div class="group button-group">
+                <button class="ghost" id="signUp">Sign up</button>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 {% endblock %}
