--- a/ntlcargo/templates/login.html
+++ b/ntlcargo/templates/login.html
@@ -53,6 +53,14 @@
     
     <div class="form-container  sign-in-container">
         <form action="#" method="POST">
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+                {% endfor %}
+
+            </ul>
+            {% endif %}
             {% csrf_token %}
             <div class="login_header">Sign In</div>
            <!-- <div class="social__media__container">
